# gnutella

./: .gitignore  Cargo.toml
gnutella_transmittable_derive/: Cargo.toml
gnutella_transmittable_derive/src/: lib.rs
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/transmittable/: deserializable.rs  impls.rs  serializable.rs
src/core/transmittable/impls/: integer.rs  ipv4_addr.rs  mod.rs
src/transmittable/: deserializable.rs  error.rs  mod.rs  serializable.rs  transmittable.rs
src/transmittable/impls/: integer.rs  ipv4_addr.rs  mod.rs  uuid.rs
tests/: transmittable_derive.rs
tests/trybuild_transmittable_derive/: fields_transmittable_impl.rs  fields_transmittable_impl.stderr  valid_transmittable_derive.rs
