[package]
name = "gnutella"
version = "1.0.0"
authors = ["Mihir Luthra <luthramihir708@gmail.com>"]
edition = "2018"
license = "GPL-1.0-only"
description = "Gnutella implementation in rust; WIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
