[package]
name = "gnutella_transmittable_derive"
version = "0.1.0"
authors = ["Mihir Luthra <luthramihir708@gmail.com>"]
description = "Derive macro for implementing transmittable trait."
license = "GPL-1.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.64"
quote = "1.0.9"
proc-macro2 = "1.0.24"
